// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag snapshot variants matches snapshot for variant "blue" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-blue-150"
>
  Tag 
  blue
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "ghost" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-transparent"
>
  Tag 
  ghost
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "gray" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent bg-gray-50 text-gray-900"
>
  Tag 
  gray
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "green" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-green-150"
>
  Tag 
  green
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "orange" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-orange-200"
>
  Tag 
  orange
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "outline" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none text-GRAY_1000 bg-transparent border-gray-400"
>
  Tag 
  outline
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "pink" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-pink-100"
>
  Tag 
  pink
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "violet" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-violet-100"
>
  Tag 
  violet
</div>
`;

exports[`Tag snapshot variants matches snapshot for variant "yellow" 1`] = `
<div
  class="inline-flex justify-center items-center rounded-sm py-[2.5px] px-[6px] f-12-450 border select-none border-transparent text-GRAY_1000 bg-yellow-100"
>
  Tag 
  yellow
</div>
`;
